# src/auth/auth.controller.js
@@ -8,7 +8,7 @@ const loginController = async (req, res) => {
   const user = await authService.loginService(email);
 
   if (!user) {
-    return res.status(400).send({ message: "Usuário não encontrado" });
+    return res.status(404).send({ message: "Usuário não encontrado" });
   }
 
   const isPasswordValid = await bcrypt.compare(password, user.password);
